--- a/sigmod2025_tutorial_bo.ipynb
+++ b/sigmod2025_tutorial_bo.ipynb
@@ -20,6 +20,16 @@
    "execution_count": 2,
    "id": "f6d899ff-cabd-49a0-8c20-783f9cfe5f14",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from optimization_target import target_func, FUNC_DOMAIN, FUNC_RANGE, TUNABLE_PARAM_NAME, METRIC_NAME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3b519395-8aa0-403a-8537-d122b60bbf00",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -31,18 +41,13 @@
     }
    ],
    "source": [
-    "from optimization_target import target_func, FUNC_DOMAIN, FUNC_RANGE\n",
-    "\n",
-    "TUNABLE_PARAM_NAME = \"sched_migration_cost_ns\"\n",
-    "METRIC_NAME = \"Latency, ms\"\n",
-    "\n",
     "print(f\"x: '{TUNABLE_PARAM_NAME}' :: target_func domain = {FUNC_DOMAIN}\")\n",
     "print(f\"y: '{METRIC_NAME}' :: target_func range = {FUNC_RANGE}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "163b96aa-1a6a-4c90-a17e-928336f45cee",
    "metadata": {},
    "outputs": [],
@@ -52,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bfae9e37-8d88-4acf-a830-281765f56797",
    "metadata": {},
    "outputs": [
@@ -156,7 +161,7 @@
        "10  1000000.0  1.61250"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "63ca153b-b270-48a1-a9c0-7063bb03b738",
    "metadata": {},
    "outputs": [],
@@ -182,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c9e781d0-69bf-40ea-b345-4041ac9a3322",
    "metadata": {},
    "outputs": [
@@ -225,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c9bfee3a-b4ec-4dda-8b33-57a6f213d53b",
    "metadata": {},
    "outputs": [
@@ -271,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "58802af6-042a-41b5-8720-d797c4bef52e",
    "metadata": {},
    "outputs": [
