minor fixes to the BO plot (UCB)

--- a/sigmod2025_tutorial/sigmod2025_tutorial_02_bo.ipynb
+++ b/sigmod2025_tutorial/sigmod2025_tutorial_02_bo.ipynb
@@ -223,6 +223,8 @@
     "    \"#e7298a\",\n",
     "    \"#66a61e\",\n",
     "    \"#e6ab02\",\n",
+    "    \"#a6761d\",\n",
+    "    \"#666666\",\n",
     "]\n",
     "\n",
     "num_sample_funcs = 0"
@@ -266,7 +268,7 @@
     "y_mean, y_std = gp.predict(x, return_std=True)\n",
     "\n",
     "for i in range(num_sample_funcs):\n",
-    "    sns.lineplot(x=x[:,0], y=y[:,i], color=colors_dark2[i], alpha=0.6, linestyle='--')\n",
+    "    sns.lineplot(x=x[:,0], y=y[:,i], color=colors_dark2[i % len(colors_dark2)], alpha=0.5, linestyle='--')\n",
     "\n",
     "sns.lineplot(x=x[:,0], y=y_mean, color=\"black\")\n",
     "# sns.scatterplot(x=[x[y_mean.argmin(),0]], y=[y_mean.min()], marker='o', color=\"red\", alpha=1)\n",
@@ -305,8 +307,12 @@
     "# plt.savefig(\"img/sigmod2025_tutorial_03_ucb_04_kappa1.png\", transparent=False, dpi=300)\n",
     "plt.savefig(\"img/sigmod2025_tutorial_03_ucb_05_kappa2.png\", transparent=False, dpi=300)\n",
     "\n",
-    "plt.show()\n",
+    "# plt.savefig(\"img/sigmod2025_tutorial_03_ucb_06_uncertain.png\", transparent=False, dpi=300)\n",
     "\n",
+    "# ax.axis(\"off\")\n",
+    "# plt.savefig(\"img/sigmod2025_tutorial_00_bo_00_sausage.png\", transparent=True, dpi=300)\n",
+    "\n",
+    "plt.show()\n",
     "# display(y_mean)"
    ]
   },
